# robo

./: .gitignore  LICENSE  README.md  SRD.md
.github/workflows/: go.yml
robot_hal/: Cargo.toml  requirements.md
robot_hal/src/: error.rs  lib.rs  main.rs  motor.rs  sensor.rs
telemetry/: .golangci.yml  go.mod
telemetry/include/: logger.go
telemetry/src/: main.go  messages.go
telemetry/src/mqtt/: client.go
telemetry/src/simulation/: fleet.go  robot.go  types.go
telemetry/src/testing/: runner.go
telemetry/src/workerpool/: pool.go
telemetry/test/: test_messages.go
