[package]
name = "robot_hal"
version = "0.1.0"
edition = "2021"

[features]
default = ["simulation"]  # Default to simulation mode
simulation = []  # Simulation feature flag
hardware = ["dep:rppal"]  # Hardware feature flag for Raspberry Pi

[dependencies]
rppal = { version = "0.14", optional = true }  # Make rppal optional
embedded-hal = "0.2"
log = "0.4"
anyhow = "1.0"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.13"